Updated description of Dataviews.io

--- a/docs/config/sfmc-system-data-views.mdx
+++ b/docs/config/sfmc-system-data-views.mdx
@@ -27,7 +27,7 @@ Another important point related to Data Views is always knowing which Data View 
 
 Below you can find selected Salesforce Marketing Cloud Data Views focused on Subscribers, Journeys, Email and SMS Channel. I plan to cover the rest of them in the future.
 
-Be sure to check the excellent [System Tables relationship diagram](https://dataviews.io) created by [Zuzanna Jarczyńska](https://sfmarketing.cloud/author/zjarczynska/). It will for sure help you with multi-view [`JOIN`s](../sql/sfmc-sql-join.mdx).
+Be sure to check the excellent [Dataviews.io](https://dataviews.io) - an interactive system tables relationship diagram created by [Zuzanna Jarczyńska](https://sfmarketing.cloud/author/zjarczynska/). It will for sure help you with multi-view [`JOIN`s](../sql/sfmc-sql-join.mdx).
 
 :::
 
