Updated draft of the SF Certification FAQ

--- a/sites/faq/how-to-get-sf-certification-vouchers.mdx
+++ b/sites/faq/how-to-get-sf-certification-vouchers.mdx
@@ -2,11 +2,50 @@
 id: how-to-get-sf-certification-vouchers
 title: How to get SF Certification vouchers?
 sidebar_label: SF Certification Vouchers
-description: ""
+description: Salesforce Certifications. What, why and how (you can pay less).
 image: img/og/og-image-faq-sf-certification-vouchers.png
 tags: [Marketing Cloud, FAQ]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
 
-<LeadText content="" />
+<LeadText content="Salesforce Certifications. What, why and how (you can pay less)." />
+
+In Salesforce ecosystem badges and certificates are everywhere. While the former is available for free on Trailhead, the latter are quite expensive to even attempt getting them. Obviously this creates some questions:
+
+1. What is the difference free badges and paid certs?
+2. Why bother with the paid option?
+3. Can you get certified for free (or at least cheaper)?
+
+Let's dive in.
+
+## Badges vs Certification
+
+When it comes to official proofs of Salesforce knowledge, there are four types available: Badges and Superbadges available on Trailhead (self-learning platform for everyone), Certifications available on Webassessor (examination platform for everyone) and Professional Accreditations available on Partner Learning Camp (self-learning platform for official Partners).
+
+Badges are obtained (for free) by passing few quizes and, in some cases, guided hands-on exercises within a [Trailhead module](https://trailhead.salesforce.com/modules) focused on a specific topic. It can be technical (for example configuration or development) or business (best practices or frameworks) one. All required knowledge is provided within the module and it can be completed in between 5 to 40 minutes depending on the module complexity. They are great to learn stuff, but are not challenging to obtain (especially with unlimitted attempts available). For me, having a badge is a proof that someone has high-level awareness of a topic covered by the badge.
+
+Trailhead also offers [Superbadges](https://trailhead.salesforce.com/superbadges) (also for free). These are different beasts from standard badges - not only they have some of thsoe as a prerequisites, but their key task is a full-blown hands on exercise on the Salesforce CRM platform. While they also provide a guide with references, it's not enough and some work with documentation and problem solving is also required to perform the hands-on tasks. They take from few to a dozen hours and are much closer to project experience. For me, having a superbadge is a proof that someone completed the basic version of a task once and should be able to do something similar with documentation and support.
+
+Salesforce [Certifications](https://trailhead.salesforce.com/en/credentials/marketingoverview) are completly different. Whereas badges and superbadges are created for learning, certifications are for proving the knowledge. You are expected to complete (many) badges to attempt the certification exam. Real project experience is also extremly helpful (or even required) for most of them. On top of that, they aren't free. Exam attempts cost between $75+VAT (for Associate exams), $200+VAT (for most) and $400+VAT (for Architect exams). Oh yeah, there is also Certified Technical Architect for $6000+VAT per attempt waiting for you ;). While the difficulty between the exams vary a lot, they are much more challenging than badges as you have limited time (1-2 hours) to pass them and cannot use any resources other than your head. For me, having a cerification is a proof that someone has a baseline knowledge in the area and can be at least semi-independent in work there.
+
+Finally, there are [Professional Accreditations](https://partners.salesforce.com/pdx/s/learn/article/accredited-professional-MCBQXAKQTOTZCQHOXTMK33NUMLWY?language=en_US) available only for Salesforce Partners - companies responsible for implementing, supporting and enriching Salesforce solutions for SF customers. Professional Accreditations are very similar to Salesforce Certifications - they are also paid, also require a passed exam, and also have a learning path build with Trailhead modules. There are some differences, however. On top of publicly available modules they have some Partner-only knowledege sources available (in some cases - hands-on exercises). Additionally, they cover more niche topics that are not part of the standard Salesforce Certifications. For me, having an accreditation is a proof that someone has a baseline knowledge in the area and can be at least semi-independent in work there.
+
+To sum up - my growing order of confidence in person's skills looks like this:
+
+1. Badge
+2. Associate Certification
+3. Superbadge
+4. Salesforce Non-Architect Certification and Professional Accrediation
+5. Salesforce Architect Certification
+
+Does it mean that someone with just badges is worse expert than someone with 5 certificates? Not necessarily - there are knowledge titans that don't have (many or any) certificiations for various reasons, but know the tools better then Salesforce themselves. So why bother paying for certs?
+
+## Why get Salesforce certified?
+
+
+## How to get Salesforce Certified for free?
+
+
+## How to get SF Certification vouchers?
+
