Updated draft of the SF Certification FAQ

--- a/sites/faq/how-to-get-sf-certification-vouchers.mdx
+++ b/sites/faq/how-to-get-sf-certification-vouchers.mdx
@@ -23,7 +23,7 @@ Let's dive in.
 
 When it comes to official proofs of Salesforce knowledge, there are four types available: Badges and Superbadges available on Trailhead (self-learning platform for everyone), Certifications available on Webassessor (examination platform for everyone) and Professional Accreditations available on Partner Learning Camp (self-learning platform for official Partners).
 
-Badges are obtained (for free) by passing few quizes and, in some cases, guided hands-on exercises within a [Trailhead module](https://trailhead.salesforce.com/modules) focused on a specific topic. It can be technical (for example configuration or development) or business (best practices or frameworks) one. All required knowledge is provided within the module and it can be completed in between 5 to 40 minutes depending on the module complexity. They are great to learn stuff, but are not challenging to obtain (especially with unlimitted attempts available). For me, having a badge is a proof that someone has high-level awareness of a topic covered by the badge.
+[Badges](https://trailhead.salesforce.com/modules) are obtained (for free) by passing few quizes and, in some cases, guided hands-on exercises within a Trailhead module focused on a specific topic. It can be technical (for example configuration or development) or business (best practices or frameworks) one. All required knowledge is provided within the module and it can be completed in between 5 to 40 minutes depending on the module complexity. They are great to learn stuff, but are not challenging to obtain (especially with unlimitted attempts available). For me, having a badge is a proof that someone has high-level awareness of a topic covered by the badge.
 
 Trailhead also offers [Superbadges](https://trailhead.salesforce.com/superbadges) (also for free). These are different beasts from standard badges - not only they have some of thsoe as a prerequisites, but their key task is a full-blown hands on exercise on the Salesforce CRM platform. While they also provide a guide with references, it's not enough and some work with documentation and problem solving is also required to perform the hands-on tasks. They take from few to a dozen hours and are much closer to project experience. For me, having a superbadge is a proof that someone completed the basic version of a task once and should be able to do something similar with documentation and support.
 
@@ -31,7 +31,7 @@ Salesforce [Certifications](https://trailhead.salesforce.com/en/credentials/mark
 
 Finally, there are [Professional Accreditations](https://partners.salesforce.com/pdx/s/learn/article/accredited-professional-MCBQXAKQTOTZCQHOXTMK33NUMLWY?language=en_US) available only for Salesforce Partners - companies responsible for implementing, supporting and enriching Salesforce solutions for SF customers. Professional Accreditations are very similar to Salesforce Certifications - they are also paid, also require a passed exam, and also have a learning path build with Trailhead modules. There are some differences, however. On top of publicly available modules they have some Partner-only knowledege sources available (in some cases - hands-on exercises). Additionally, they cover more niche topics that are not part of the standard Salesforce Certifications. For me, having an accreditation is a proof that someone has a baseline knowledge in the area and can be at least semi-independent in work there.
 
-To sum up - my growing order of confidence in person's skills looks like this:
+To sum up - my growing order of confidence in person's skills based on just credentials looks like this:
 
 1. Badge
 2. Associate Certification
@@ -39,9 +39,11 @@ To sum up - my growing order of confidence in person's skills looks like this:
 4. Salesforce Non-Architect Certification and Professional Accrediation
 5. Salesforce Architect Certification
 
-Does it mean that someone with just badges is worse expert than someone with 5 certificates? Not necessarily - there are knowledge titans that don't have (many or any) certificiations for various reasons, but know the tools better then Salesforce themselves. So why bother paying for certs?
+Does it mean that someone with just badges is worse expert than someone with 5 certificates? Not necessarily - there are knowledge titans that don't have (many or any) certificiations for various reasons, but know the tools better then Salesforce themselves. Real world project experience and expertise is best. So why bother paying for certs?
 
 ## Why get Salesforce certified?
+
+
 
 
 ## How to get Salesforce Certified for free?
